# nvidia-wormhole

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  com.github.doublepranks.nvidia-wormhole.yml  nvidia-wormhole.desktop  nvidia-wormhole.service
src/: main.rs
src/config/: mod.rs
src/daemon/: loop.rs  math.rs  mod.rs
src/gui/: app.rs  mod.rs  style.rs
src/hardware/: mod.rs  nvidia.rs  probe.rs  telemetry.rs
src/setup/: mod.rs
src/util/: mod.rs
