[package]
name = "nvidia-wormhole"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["canvas", "svg", "tokio", "debug"] }
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
dirs = "5.0"
regex = "1.10"
open = "5.3.3"
image = "0.24"

[profile.release]
lto = true
codegen-units = 1
